# GameBoyEmulator

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  GameBoyEmulator.ini  README.md
.github/: labeler.yml
.github/workflows/: cmake.yml  pre-release.yml  release.yml
BashScripts/: generateOpcodesArray.sh  generateOpcodesSwitch.sh  opcodesArrayGeneration.txt  opcodesSwitchGeneration.txt
Documentation/: Game Boy Emulator notes.docx
GameBoyEmulator/: .editorconfig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Cartridge.cpp  Cartridge.h  Cpu.cpp  Cpu.h  GameBoy.cpp  GameBoy.h  GameBoyEmulator.sln  Joypad.cpp  Joypad.h  Mbc.cpp  Mbc.h  Memory.cpp  Memory.h  Ppu.cpp  Ppu.h  SdlLib.cpp  Spu.cpp  Spu.h  binaryLib.h  debug.cpp  main.cpp
GameBoyEmulator/GameBoyEmulator/: CMakeLists.txt  Cartridge.cpp  Cartridge.h  Cpu.cpp  Cpu.h  GameBoy.cpp  GameBoy.h  GameBoyEmulator.vcxproj  GameBoyEmulator.vcxproj.filters  GameBoycpp.cpp  GlfwOpenglLib.cpp  GlfwOpenglLib.h  Joypad.cpp  Joypad.h  Lcd.cpp  Lcd.h  Main.cpp  Memory.cpp  Memory.h  Ppu.cpp  Ppu.h  SdlLib.cpp  SdlLib.h  Spu.cpp  Spu.h  binaryLib.cpp  binaryLib.h  cartridgeDebug.txt  debug.cpp  debug.h  gameBoy.cpp  glad.c  input.cpp  input.h  main.cpp  opcodes.h  opcodesDebug.txt  opcodesUniqueDebug.txt  openGlLib.cpp  openGlLib.h  (+8 more)
GameBoyEmulator/GameBoyEmulator/Debug/: Cartridge.nativecodeanalysis.sarif  Cartridge.nativecodeanalysis.xml  CodeAnalysisResultManifest.txt  Cpu.nativecodeanalysis.sarif  Cpu.nativecodeanalysis.xml  GameBoy.nativecodeanalysis.sarif  GameBoyEmulator.exe.recipe  GameBoyEmulator.ilk  Joypad.nativecodeanalysis.sarif  Memory.nativecodeanalysis.sarif  Ppu.nativecodeanalysis.sarif  SdlLib.nativecodeanalysis.sarif  Spu.nativecodeanalysis.sarif  binaryLib.nativecodeanalysis.sarif  cpu.obj.enc  debug.nativecodeanalysis.sarif  gameboy.obj.enc  main.nativecodeanalysis.sarif  memory.obj.enc  vc.nativecodeanalysis.all.xml  vc142.idb  vc143.idb
GameBoyEmulator/GameBoyEmulator/Debug/GameBoyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameBoyEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameBoyEmulator/GameBoyEmulator/Release/: GameBoyEmulator.exe.recipe  GameBoyEmulator.iobj  GameBoyEmulator.ipdb
GameBoyEmulator/GameBoyEmulator/Release/GameBoyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameBoyEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameBoyEmulator/GameBoyEmulator/x64/Debug/: Cartridge.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  Cpu.nativecodeanalysis.sarif  GameBoy.nativecodeanalysis.sarif  GameBoyEmulator.exe.recipe  GameBoyEmulator.ilk  GlfwOpenglLib.nativecodeanalysis.sarif  Memory.nativecodeanalysis.sarif  Ppu.nativecodeanalysis.sarif  binaryLib.nativecodeanalysis.sarif  cpu.obj.enc  debug.nativecodeanalysis.sarif  gameboy.obj.enc  main.nativecodeanalysis.sarif  memory.obj.enc  ppu.obj.enc  readWriteFiles.nativecodeanalysis.sarif  settings.nativecodeanalysis.sarif  vc142.idb  vc143.idb
GameBoyEmulator/GameBoyEmulator/x64/Debug/GameBoyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameBoyEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameBoyEmulator/GameBoyEmulator/x64/Release/: GameBoyEmulator.exe.recipe  GameBoyEmulator.iobj  GameBoyEmulator.ipdb
GameBoyEmulator/GameBoyEmulator/x64/Release/GameBoyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameBoyEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameBoyEmulator/IniLoader/: IniLoader.cpp  IniLoader.h  settings.h
GameBoyEmulator/MBC/: Mbc.cpp  Mbc.h  Mbc1.cpp  Mbc1.h  Mbc2.cpp  Mbc2.h  Mbc3.cpp  Mbc3.h  Mbc5.cpp  Mbc5.h  MbcRom.cpp  MbcRom.h  Rom.cpp  Rom.h
GameBoyEmulator/SDL2/include/: SDL_mouse.h
GameBoyEmulator/settings/: IniLoader.cpp  IniLoader.h
GameBoyEmulator/trash/: settings.h
README_files/Videos/: nintendoLogo.mkv
Realease/: CMakeCache.txt
Release/Linux/: GameBoyEmulator
Trash/: old.txt  testCarryBorrow.txt
Trash bin/: opcodesStructs.txt
